fix: spacing for frankendancer health pane

--- a/src/features/Header/healthPane.module.css
+++ b/src/features/Header/healthPane.module.css
@@ -34,7 +34,6 @@
     cursor: pointer;
 
     &.stacked {
-      max-height: 6px;
       width: 100%;
     }
 
